Opened 16 years ago

Closed 15 years ago

Last modified 15 years ago

#3671 closed bug (fixed)

mountvolume can't unmount a volume

Reported by: idefix Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/Command Line Tools Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I have a logical partition on my second HD called 'test' which I can mount with 'mountvolume test'. When I want to unmount it with mountvolume,

  • 'mountvolume -unmount test' gives "Volume 'test' not mounted."
  • 'mountvolume -unmount /test' gives "Failed to unmount volume '/test': Volume not found."
  • 'mountvolume -unmount /test/' gives "Failed to unmount volume '/test/': Volume not found."

Under BeOS I can only unmount this volume with 'mountvolume -unmount /test', all the other options don't work.

Change History (3)

comment:1 by idefix, 16 years ago

The partition is not a logical, but a primary partition (the fourth on that HD).

comment:2 by axeld, 15 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev30972.

comment:3 by idefix, 15 years ago

Thanks for fixing. I can now unmount a volume with 'mountvolume -unmount test'.

Both 'mountvolume -unmount /test' and 'mountvolume -unmount /test/' don't work though.
Could mountvolume be extended to also support these two commands? This way it would be compatible with BeOS's version and also improve usability somewhat (tab-completion).

Note: See TracTickets for help on using tickets.