* Unmounting a volume now actually works, this fixes bug #3671. * Added -u as an alias for -unmount. Added -readonly as an alias for -ro. * Made the volume/fs column width depending on the terminal size. * Now lists the volumes (-l) when invoked without any arguments instead of   showing the help text. * Improved output of not mounted volumes. * Minor cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30972 a95241bf-73f2-0310-859d-f6bbb57e9c96